GB-26: move files for successful program run